--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                 <div class="layui-form-item">
                     <!-- 用户图标 -->
                     <i class="layui-icon layui-icon-username"></i>
-                    <input type="text" name="username" required lay-verify="required|pwd" placeholder="请输入用户名"
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
                         autocomplete="off" class="layui-input">
                 </div>
                 <!-- 输入密码 -->
@@ -35,12 +35,12 @@
                     <!-- 密码图标 -->
                     <i class="layui-icon layui-icon-password
                 "></i>
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
                         autocomplete="off" class="layui-input" id="password">
                 </div>
                 <!-- 登录按钮 -->
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid layui-btn-normal layui-btn-radius" lay-submit>登录</button>
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
                 </div>
                 <div class="links">
                     <a href="javascript:;" id="link_reg">去注册</a>
@@ -77,7 +77,7 @@
                 </div>
                 <!-- 登录按钮 -->
                 <div class="layui-form-item">
-                    <button class="layui-btn layui-btn-fluid layui-btn-normal layui-btn-radius" lay-submit>注册</button>
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
                 </div>
                 <div class="links">
                     <a href="javascript:;" id="link_login">去登陆</a>
